Fixes white space preservation in comment text.

--- a/src/sass/_commentContent.scss
+++ b/src/sass/_commentContent.scss
@@ -71,7 +71,7 @@
 
 			.text {
 				margin: 0 0 1rem 0;
-				white-space: unset;
+				white-space: pre-line;
 				font-size: inherit;
 				color: $text-gray;
 				border: initial;
